# walshproj

./: .replit  auth.py  create_demo_data.py  database.py  main.py  models.py  poi_network.db  pyproject.toml  replit.md  schemas.py
.local/share/pnpm/store/v10/index/00/: e22049009ea62258c0fdc04671b1fb95674eed870587736c63f8e5e2f0d6fa-glob-parent@5.1.2.json
.local/share/pnpm/store/v10/index/04/: b2374e5d535b73ef97bd25df2ab763ae22f9ac29c17aac181616924a8cb676-which@2.0.2.json
.local/share/pnpm/store/v10/index/05/: 1ed5bc30951cefaadb10445ac9314ba0c9135a919dbec3c7352ba206fbd425-semver@6.3.1.json
.local/share/pnpm/store/v10/index/06/: add2992a721476968cf93c21ff7273ab2f33c739e9d079040b56e106f0e631-ansi-regex@6.2.2.json
.local/share/pnpm/store/v10/index/09/: e87eee8c79a9eecb26e2c7a18d1f7a1de91ee5031c071151ec8bd95620859c-binary-extensions@2.3.0.json
.local/share/pnpm/store/v10/index/0e/: 5abfe4b019805d066b3eb28aa6427fa542719b35821009cabb2ef3843f193d-react-dom@19.1.1.json
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AchievementBadges.tsx  Navbar.tsx  ProblemCard.tsx  ReputationLevel.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  LoginPage.tsx  PostProblem.tsx  ProblemDetail.tsx  ProfilePage.tsx  SignupPage.tsx  TransactionHistory.tsx  ValidatorPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
(+189 files in other folders)
